@@ -31,6 +31,7 @@ Revision history for DBIx::Class
     * Misc
         - Centralized leak-checks for all instances of DBICTest::Schema
           from within any test
+        - Now passes all tests with Test::Builder 1.005
         - Codebase is now trailing-whitespace-free
         - Cleanup of complex resultset update/delete oprations - storage
           specific code moved back to ResultSet and replaced by checks
